--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 	],
 	"dependencies": {
 		"@shelacek/ubjson": "^1.0.1",
-		"@types/node": "^14.11.10",
 		"bson": "^4.2.0",
 		"fs": "^0.0.1-security",
 		"path": "^0.12.7"
+	},
+	"devDependencies": {
+		"@types/node": "^14.11.10"
 	}
 }
